fixed typos and leftovefrs

--- a/Resources/config/services.yml
+++ b/Resources/config/services.yml
@@ -1,5 +1,5 @@
 parameters:
-#    babaganoush_datatables.example.class: Babaganoush\DataGridsterBundle\Example
+#    babaganoush_gridster.example.class: Babaganoush\GridsterBundle\Example
 
 services:
 #    babaganoush_gridster.example:
